--- a/store_final/css/styles.css
+++ b/store_final/css/styles.css
@@ -33,22 +33,29 @@
 
       }
 
-      /* Card de producto */
+      
+      
+
+      /* Bloque de productos */
+      .product-container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* 3 columnas */
+        grid-gap: 20px;
+        padding: 20px;
+
+      }
+
       .product-card {
         background-color: #f0f0f0;
         border-radius: 14px;
         width: auto;
         text-decoration: none;
-        padding: 5px;
+        padding: 10px;
       }
 
-      /* Bloque de productos */
-      .product-container {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 20px;
-        padding: 20px;
-
+      .product-card img {
+        width: 360px;
+        height: auto;
       }
 
       @media (max-width: 1200px) {
